--- a/firebase.json
+++ b/firebase.json
@@ -1,28 +1,6 @@
 {
-  "hosting": [
-    {
-      "target": "TP-sala-de-juegos",
-      "public": "dist/TP-sala-de-juegos",
-      "ignore": [
-        "**/.*"
-      ],
-      "headers": [
-        {
-          "source": "*.[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].+(css|js)",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "public,max-age=31536000,immutable"
-            }
-          ]
-        }
-      ],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ]
-    }
-  ]
+  "hosting": {
+    "public": "dist/TP-sala-de-juegos",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+  }
 }
