--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
+    "date-fns": "^2.21.3",
     "express": "^4.17.1",
     "firebase": "^8.3.1",
     "path": "^0.12.7",
